--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "keen-slider": "^6.8.6",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
