--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "framer-motion": "^10.16.4",
     "keen-slider": "^6.8.6",
     "next": "13.5.4",
     "react": "^18",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18"
   },
   "devDependencies": {
