--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
     "keen-slider": "^6.8.6",
@@ -16,7 +17,9 @@
     "next": "13.5.4",
     "react": "^18",
     "react-detect-click-outside": "^1.1.7",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
