--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@tanstack/react-query": "^5.0.5",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
     "keen-slider": "^6.8.6",
@@ -19,7 +22,8 @@
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "^20",
