--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-image-file-resizer": "^0.4.8",
     "zod": "^3.22.4",
     "zustand": "^4.4.4"
   },
