--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.0.5",
@@ -23,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-image-file-resizer": "^0.4.8",
+    "sonner": "^1.0.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.4"
   },
