--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tanstack/react-query": "^5.0.5",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "dompurify": "^3.0.6",
     "framer-motion": "^10.16.4",
+    "html-to-text": "^9.0.5",
     "keen-slider": "^6.8.6",
     "lottie-react": "^2.4.0",
     "next": "13.5.4",
@@ -24,11 +26,14 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-quill": "^2.0.0",
     "sonner": "^1.0.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.4",
+    "@types/html-to-text": "^9.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
