--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "dompurify": "^3.0.6",
+    "draft-js": "^0.11.7",
     "framer-motion": "^10.16.4",
     "html-to-text": "^9.0.5",
     "keen-slider": "^6.8.6",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.4",
+    "@types/draft-js": "^0.11.15",
     "@types/html-to-text": "^9.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
