--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.47.0",
     "react-image-file-resizer": "^0.4.8",
     "react-quill": "^2.0.0",
+    "sharp": "^0.32.6",
     "sonner": "^1.0.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.4"
