--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-quill": "^2.0.0",
     "sharp": "^0.32.6",
     "sonner": "^1.0.3",
+    "tailwind-scrollbar": "^3.0.5",
     "zod": "^3.22.4",
     "zustand": "^4.4.4"
   },
