--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.47.0",
     "react-image-file-resizer": "^0.4.8",
     "react-phone-number-input": "^3.3.7",
@@ -42,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.7",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
