--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-quill": "^2.0.0",
     "sonner": "^1.0.3",
     "tailwind-scrollbar": "^3.0.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.22.4",
     "zustand": "^4.4.4"
   },
